# LatentFlow

./: .gitignore  README.md  pyproject.toml  requirements.txt  run.sh  setup.py  test_diffusion.py
assets/: make_diagram.py
configs/: default.yaml
latentflow/: __init__.py
latentflow/data/: __init__.py  dataset.py
latentflow/diffusion/: __init__.py  gaussian_diffusion.py  schedule.py
latentflow/models/: __init__.py  dit.py  vae.py
latentflow/utils/: __init__.py  config.py  ema.py  logging_utils.py  seed.py
scripts/: eval_fid.py  precompute_latents.py  sample.py  train.py
