[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "latentflow"
version = "0.1.0"
description = "Diffusion Transformer (DiT) image generator built from scratch in PyTorch with latent diffusion"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Pranjal", email = "pranjal@example.com"}
]
dependencies = [
    "torch>=2.3.0",
    "torchvision>=0.18.0",
    "numpy>=1.24.3",
    "PyYAML>=6.0",
    "tqdm>=4.65.0",
    "diffusers>=0.28.0",
    "huggingface_hub>=0.22.0",
    "transformers>=4.38.0",
    "einops>=0.7.0",
    "torchmetrics>=1.0.0",
    "clean-fid>=0.1.35",
    "tensorboard>=2.15.0",
    "Pillow>=10.1.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/latentflow"
Repository = "https://github.com/yourusername/latentflow.git"

[tool.setuptools]
packages = ["latentflow", "latentflow.models", "latentflow.diffusion", "latentflow.data", "latentflow.utils"]

[tool.black]
line-length = 100

[tool.isort]
profile = "black"
line_length = 100
